fix: re-instante macOS handlers